fixed gaps between pics

--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@ section, .about-me, .skills, .project {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 30px;
     padding: var(--padding-standard);
     border-radius: 20px;
     background-color: var(--background-color);
@@ -140,7 +141,7 @@ span {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 40px;
+    gap: 60px;
     margin: 10px auto;
 }
 
